# todolist_app

./: Dockerfile  Procfile  README.md  main.py  main_demo.py  pyproject.toml
.github/workflows/: fransys.yml
src/todolist_app/: app.py  controller_port.py  main.py
src/todolist_app/primary/: app.py
src/todolist_app/primary/views/: history.tpl  index.tpl  task.tpl  task_list.tpl  todolist.tpl
src/todolist_app/secondary/: controller_for_demo.py
src/todolist_app/views/: index.tpl  task.tpl  todolist.tpl
tests/: test_controller.py
