[project]
name = "todolist-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan",email = "johjo@ytreza.org"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "bottle (>=0.13.2,<0.14.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "todolist-controller @ git+https://github.com/Johjo/todolist_controller",
]

[tool.poetry]
packages = [
    { include = "todolist_app", from = "src" }
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
